--- a/src/app/shared/components/subscriptions/subscription-cancel/cancel-subscription-dialog.component.html
+++ b/src/app/shared/components/subscriptions/subscription-cancel/cancel-subscription-dialog.component.html
@@ -8,7 +8,7 @@
 
 <div class="pt-5 pb-5 redirections text-align-center">
 
-    <h2 class="font-size-26px mb-3">Do you Really Wish to Cancel This Plan?</h2>
+    <h2 class="font-size-26px mb-3">Do you Really Wish to Unsubscribe This Plan?</h2>
 
     <div class="shadow-tag pl-4 pr-4 pt-3 pb-3" [ngClass]="isMobile ? 'w-100' : 'w-75' ">
         We don't want to see you go
@@ -19,8 +19,8 @@
     </div>
 
     <div [ngClass]="isMobile ? 'mt-4' : 'mt-5' ">
-        <button mat-button class="brand-bg-color pl-5 pr-5 font-size18 pb-2 pt-2" (click)="cancelSubscription()">Update
-            Details</button>
+        <button mat-button class="brand-bg-color pl-5 pr-5 font-size18 pb-2 pt-2"
+            (click)="cancelSubscription()">Unsubscribe</button>
     </div>
 
 </div>
