--- a/src/app/shared/header/sidenav-list.html
+++ b/src/app/shared/header/sidenav-list.html
@@ -24,14 +24,16 @@
     </ng-container>
   </ng-container>
 
-  <div [ngClass]="(buttonName && (buttonName === 'My Plans')) ? 'display-flex active' : 'display-flex'">
-    <a href="javascript:void(0)" mat-list-item (click)="goToMyPlans()">
-      <img src="../../../assets/images/subscription-plan.svg" alt="" />
-      <span class="p-l-15">
-        My Plan / Upgrade
-      </span>
-    </a>
-  </div>
+  <ng-container *ngIf="isPlanAvailable === 1">
+    <div [ngClass]="(buttonName && (buttonName === 'My Plans')) ? 'display-flex active' : 'display-flex'">
+      <a href="javascript:void(0)" mat-list-item (click)="goToMyPlans()">
+        <img src="../../../assets/images/subscription-plan.svg" alt="" />
+        <span class="p-l-15">
+          My Plan / Upgrade
+        </span>
+      </a>
+    </div>
+  </ng-container>
 
   <div class="display-flex">
     <a href="javascript:void(0)" mat-list-item (click)="logout()">
