--- a/src/app/features/users/user-details/user-details.component.html
+++ b/src/app/features/users/user-details/user-details.component.html
@@ -200,15 +200,18 @@
               <ng-container matColumnDef="Project">
                 <th mat-header-cell *matHeaderCellDef class="project-user-details-width">Project</th>
                 <td mat-cell *matCellDef="let element" class="project-user-details-width">
-                  <div class="project-name-div">
-                    <ng-container *ngFor="let x of element.ProjectList; let i = index">
-                      <button mat-button class="btn-project-user-details" *ngIf="i < 2">
-                        <div>
-                          {{ x.projectName }}
-                        </div>
-                      </button>
-                    </ng-container>
-
+                  <div class="display-flex">
+                    <div class="project-name-div">
+                      <div>
+                        <ng-container *ngFor="let x of element.ProjectList; let i = index">
+                          <button mat-button class="btn-project-user-details" *ngIf="i < 2">
+                            <div>
+                              {{ x.projectName }}
+                            </div>
+                          </button>
+                        </ng-container>
+                      </div>
+                    </div>
                     <div class="show-rfq-names rfq-icon-material-i" *ngIf="element.ProjectList && element.ProjectList.length > 2">
                       <!-- <img src="../../../../assets/images/i_icon.png" /> -->
                       <!-- <mat-icon class="material-info" [matMenuTriggerFor]="projectnames">info</mat-icon> -->
