--- a/src/assets/scss/pages/ngx-date.scss
+++ b/src/assets/scss/pages/ngx-date.scss
@@ -57,6 +57,13 @@ td .mat-calendar-body-selected {
   margin-top: -1px;
 }
 
+.wdpw-100{
+  .mat-form-field{
+    width: 100% !important;
+    padding-right: 10px;
+  }
+}
+
 .input-font-size {
   .mat-form-field-infix .ngx-mat-drp-date-input {
     font-size: 11px;
