subscription changes with dashboard mobile screen

--- a/src/app/features/app-dashboard/app-dashboard.component.html
+++ b/src/app/features/app-dashboard/app-dashboard.component.html
@@ -24,7 +24,7 @@
                 </div>
 
                 <div class="things-to-do__icons text-center cursor mr-2" (click)="openBomDialog()"
-                  matTooltip="You can create your BOM of materials">
+                  matTooltip="You can create your Bill Of Material (BOM)">
                   <div class="things-to-do__img">
                     <img src="../../../assets/images/bom.svg" alt="" class="img-fluid" />
                   </div>
@@ -32,7 +32,7 @@
                 </div>
 
                 <div *ngIf="permissionObj.rfqFlag" class="things-to-do__icons text-center cursor mr-2"
-                  (click)="openBomDialog()" matTooltip="You can create your PRs">
+                  (click)="openBomDialog()" matTooltip="You can create your Purchase Requisition (PRs)">
                   <div class="things-to-do__img">
                     <img src="../../../assets/images/pr.svg" alt="Purchase Requistion" class="img-fluid" />
                   </div>
@@ -40,7 +40,7 @@
                 </div>
 
                 <div *ngIf="permissionObj.rfqFlag" class="things-to-do__icons text-center cursor mr-2"
-                  [routerLink]="['/rfq/createRfq']" matTooltip="You can create your RFPs">
+                  [routerLink]="['/rfq/createRfq']" matTooltip="You can create your Request For Price (RFPs)">
                   <div class="things-to-do__img">
                     <img src="../../../assets/images/rfp.svg" alt="" class="img-fluid" />
                   </div>
@@ -48,7 +48,7 @@
                 </div>
 
                 <div *ngIf="permissionObj.rfqFlag" class="things-to-do__icons text-center cursor mr-2"
-                  [routerLink]="['/po/initiate-po']" matTooltip="You can create your P.O.">
+                  [routerLink]="['/po/initiate-po']" matTooltip="You can create your Purchase Order (P.O.)">
                   <div class="things-to-do__img">
                     <img src="../../../assets/images/po.svg" alt="" class="img-fluid" />
                   </div>
@@ -58,7 +58,8 @@
             </div>
             <div class="statistics bg-white p-20 p-r-0 mb-4">
               <div class="row">
-                <div class="col-xs-12 col-md-12 p-r-0 p-l-0" [ngClass]="isMobile ? 'order-last' : ''">
+                <div class="col-xs-12 col-md-12 p-r-0 p-l-0">
+                  <!-- <div class="col-xs-12 col-md-12 p-r-0 p-l-0" [ngClass]="isMobile ? 'order-last' : ''"> -->
                   <mat-tab-group class="mat-tabs-button" (selectedTabChange)="onTabChanged($event)"
                     [ngClass]="isMobile ? 'mt-0' : 'mt-1'">
                     <mat-tab label="{{ tab1 }}" *ngIf="permissionObj.rfqFlag">
@@ -171,10 +172,10 @@
                         </div>
                         <div class="col-md-6 display-flex">
                           <form [formGroup]="filterForm" class="display-flex"
-                            [ngClass]="isMobile ? 'flex-column' : 'width-99' ">
+                            [ngClass]="isMobile ? 'flex-column w-100' : 'width-99' ">
                             <div [ngClass]="isMobile ? 'w-100' : 'width-35' ">
-                              <mat-form-field
-                                class="border-select select-project width-94 mat-form-field-flex-mm-padding">
+                              <mat-form-field class="border-select select-project mat-form-field-flex-mm-padding"
+                                [ngClass]="isMobile ? 'w-100' : 'width-94' ">
                                 <mat-label>Select Project</mat-label>
                                 <mat-select formControlName="projectFilter" multiple>
                                   <div class="display-flex">
@@ -192,14 +193,14 @@
                             </div>
 
                             <div class="p-r-0 customDatePicker"
-                              [ngClass]="isMobile ? 'pl-0 wdrpr-mb wdpw-100 w-100' : 'widthWrapper width-35 p-t-7'">
+                              [ngClass]="isMobile ? 'pl-0 wdpw-100 w-100' : 'widthWrapper width-35 p-t-7' ">
                               <ngx-mat-drp class="border-input input-font-size"
                                 (selectedDateRangeChanged)="updateRange($event)" [options]="options" #dateRangePicker>
                               </ngx-mat-drp>
                             </div>
-                            <div class="width-35 p-r-0 p-l-10">
-                              <mat-form-field
-                                class="border-select select-project width-94 mat-form-field-flex-mm-padding">
+                            <div class="p-r-0" [ngClass]="isMobile ? 'w-100' : 'width-35 p-l-10' ">
+                              <mat-form-field class="border-select select-project mat-form-field-flex-mm-padding"
+                                [ngClass]="isMobile ? 'w-100' : 'width-94' ">
                                 <mat-label>Status Filter</mat-label>
                                 <mat-select formControlName="rfpFilter">
                                   <mat-option value="Rasied RFP">Rasied RFP</mat-option>
@@ -240,11 +241,11 @@
                             </div>
                           </div>
                         </div>
-                        <div class="col-md-5 display-flex text-right">
-                          <div class="width-42">
+                        <div class="col-md-5 display-flex text-right" [ngClass]="isMobile ? 'flex-column' : '' ">
+                          <div [ngClass]="isMobile ? 'w-100' : 'width-42' ">
                             <form [formGroup]="filterForm" [ngClass]="isMobile ? 'flex-column' : 'width-99' ">
-                              <mat-form-field
-                                class="border-select select-project width-94 mat-form-field-flex-mm-padding">
+                              <mat-form-field class="border-select select-project mat-form-field-flex-mm-padding"
+                                [ngClass]="isMobile ? 'w-100' : 'width-94' ">
                                 <mat-label>Select Project</mat-label>
                                 <mat-select formControlName="projectFilter" multiple>
                                   <div class="display-flex">
@@ -261,8 +262,9 @@
                               </mat-form-field>
                             </form>
                           </div>
-                          <div class="width-88">
-                            <div class="p-r-0 customDatePicker" [ngClass]="isMobile ? 'pl-0 wdrpr-mb' : 'widthWrapper'">
+                          <div [ngClass]="isMobile ? 'w-100' : 'width-88' ">
+                            <div class="p-r-0 customDatePicker"
+                              [ngClass]="isMobile ? 'pl-0 wdpw-100 w-100' : 'widthWrapper'">
                               <ngx-mat-drp class="border-input" (selectedDateRangeChanged)="updateRange($event)"
                                 [options]="options" #dateRangePicker></ngx-mat-drp>
                             </div>
@@ -272,11 +274,13 @@
                     </mat-tab>
                   </mat-tab-group>
                 </div>
-                <div class="col-md-12 display-flex justify-content-center">
-                  <div *ngIf="permissionObj.rfqFlag && poData && poData.graphData && poData.graphData.length > 1 && label == 'po'">
+                <div class="col-md-12 display-flex" [ngClass]="isMobile ? '' : 'justify-content-center' ">
+                  <div
+                    *ngIf="permissionObj.rfqFlag && poData && poData.graphData && poData.graphData.length > 1 && label == 'po'">
                     <app-bar-chart></app-bar-chart>
                   </div>
-                  <div *ngIf="permissionObj.rfqFlag && rfqData && rfqData.graphData && rfqData.graphData.length > 1 && label == 'rfq'">
+                  <div
+                    *ngIf="permissionObj.rfqFlag && rfqData && rfqData.graphData && rfqData.graphData.length > 1 && label == 'rfq'">
                     <app-bar-chart></app-bar-chart>
                   </div>
                   <div
