--- a/src/app/features/subscription-redirections/subscription-redirections.component.html
+++ b/src/app/features/subscription-redirections/subscription-redirections.component.html
@@ -110,7 +110,7 @@
 
                 <ng-container *ngIf="pageType !== 3">
                     <div class="pt-0 pb-2 text-center">
-                        <button mat-button class="brand-color" routerLink="/dashboard">Cancel</button>
+                        <button mat-button class="brand-color" routerLink="/dashboard">Back to Dashboard</button>
                     </div>
                 </ng-container>
 
