--- a/src/app/shared/header/top-header/top-header.component.html
+++ b/src/app/shared/header/top-header/top-header.component.html
@@ -7,16 +7,18 @@
         src="../../../../assets/images/loginLogo.png" alt="logo" /></span>
     <span class="menu-spacer"></span>
 
-    <a href="https://api.whatsapp.com/send?phone=+918512060007" target="_blank" [ngClass]="isMobile ? 'p-1' : '' ">
-      <div class="whatsapp-div-header">
-        <div>
-          <img src="../../../../assets/images/whatsapp-main.png" class="whatsapp-icon" />
+    <ng-container *ngIf="isWhatsappIconDisplay === '+91'">
+      <a href="https://api.whatsapp.com/send?phone=+918512060007" target="_blank" [ngClass]="isMobile ? 'p-1' : '' ">
+        <div class="whatsapp-div-header">
+          <div>
+            <img src="../../../../assets/images/whatsapp-main.png" class="whatsapp-icon" />
+          </div>
+          <div class="whatsapp-icon-number">
+            +91 8512060007
+          </div>
         </div>
-        <div class="whatsapp-icon-number" *ngIf="isWhatsappIconDisplay === '+91'">
-          +91 8512060007
-        </div>
-      </div>
-    </a>
+      </a>
+    </ng-container>
 
     <button class="pull-right p-t-10 notification-bell-icon" [ngClass]="isMobile ? 'p-1' : '' " mat-button
       [matMenuTriggerFor]="notifs">
@@ -52,7 +54,7 @@
     </div>
   </mat-toolbar-row>
 </mat-toolbar>
-<ng-container *ngIf="isFreeTrialActivate">
+<ng-container *ngIf="isFreeTrialActivate && isFreeTrial !== null">
   <div class="trial-block" [ngClass]="isMobile ? 'font-size10' : '' ">
     <span class="mr-1">Your Free Trial of {{ isFreeTrial.planName }} Plan Expire Soon {{ isFreeTrial.daysLeft }} Days
       Left</span>
