--- a/src/app/shared/dialogs/add-grn/add-supplier/add-supplier.component.html
+++ b/src/app/shared/dialogs/add-grn/add-supplier/add-supplier.component.html
@@ -14,7 +14,7 @@
         <span class="text-semi-bold p-r-10"> Date-</span>
         <mat-form-field class="border-input width-50">
           <mat-label>Receipt Date*</mat-label>
-          <input #dateinput matInput formControlName="grnDate" [matDatepicker]="endDate" (click)="endDate.open()" readonly />
+          <input #dateinput matInput formControlName="grnDate" [max]="todayDate" [matDatepicker]="endDate" (click)="endDate.open()" readonly />
           <mat-datepicker-toggle matSuffix [for]="endDate"></mat-datepicker-toggle>
           <mat-datepicker #endDate startView="month"></mat-datepicker>
         </mat-form-field>
