--- a/src/app/shared/dialogs/tax-cost/tax-cost.component.html
+++ b/src/app/shared/dialogs/tax-cost/tax-cost.component.html
@@ -50,7 +50,7 @@
                   </ng-container>
                 </div>
                 <div class="col-1">
-                  <span *ngIf="taxCostForm.get('taxInfo')['controls'].length > 1" matRipple class="cursor-pointer position-absolute pt-3" (click)="deleteField('taxInfo', i)">
+                  <span matRipple class="cursor-pointer position-absolute pt-3" (click)="deleteField('taxInfo', i)">
                     <img src="../../../../assets/images/delete-button.png" />
                   </span>
                 </div>
@@ -77,9 +77,12 @@
                   </mat-form-field>
                 </div>
                 <div class="col-4">
-                  <mat-form-field class="w-100 border-bottom">
-                    <input matInput type="number" placeholder="Amount" formControlName="otherCostAmount" />
-                  </mat-form-field>
+                  <div class="display-flex align-item-end">
+                    <mat-form-field class="width-90 border-bottom">
+                      <input matInput type="number" placeholder="Amount" formControlName="otherCostAmount" />
+                    </mat-form-field>
+                    <span class="p-l-5">{{ this.data.currency }}</span>
+                  </div>
                   <ng-container *ngIf="taxCostForm.get('otherCostInfo')['controls'][i].get('otherCostAmount').touched">
                     <mat-error class="mt-mns pt-1 pb-2 font-size11" *ngIf="taxCostForm.get('otherCostInfo')['controls'][i].get('otherCostAmount').errors?.min">
                       Min 1 qty is Allowed
@@ -87,12 +90,7 @@
                   </ng-container>
                 </div>
                 <div class="col-1">
-                  <span
-                    *ngIf="taxCostForm.get('otherCostInfo')['controls'].length > 1"
-                    matRipple
-                    class="cursor-pointer position-absolute pt-3"
-                    (click)="deleteField('otherCostInfo', i)"
-                  >
+                  <span matRipple class="cursor-pointer position-absolute pt-3" (click)="deleteField('otherCostInfo', i)">
                     <img src="../../../../assets/images/delete-button.png" />
                   </span>
                 </div>
@@ -137,22 +135,21 @@
               </mat-form-field>
             </div>
             <div class="col-4">
-              <mat-form-field class="w-100 border-bottom">
-                <input matInput type="number" placeholder="Amount" formControlName="otherCostAmount" />
-              </mat-form-field>
+              <div class="display-flex align-item-end">
+                <mat-form-field class="width-90 border-bottom">
+                  <input matInput type="number" placeholder="Amount" formControlName="otherCostAmount" />
+                </mat-form-field>
+                <span class="p-l-5">{{ this.data.currency }}</span>
+              </div>
               <ng-container *ngIf="otherCostForm.get('otherCostInfo')['controls'][i].get('otherCostAmount').touched">
                 <mat-error class="mt-mns pt-1 pb-2 font-size11" *ngIf="otherCostForm.get('otherCostInfo')['controls'][i].get('otherCostAmount').errors?.min">
                   Min 1 qty is Allowed
                 </mat-error>
               </ng-container>
             </div>
+
             <div class="col-1">
-              <span
-                *ngIf="otherCostForm.get('otherCostInfo')['controls'].length > 1"
-                matRipple
-                class="cursor-pointer position-absolute pt-3"
-                (click)="deleteField('otherCostInfo', i)"
-              >
+              <span matRipple class="cursor-pointer position-absolute pt-3" (click)="deleteField('otherCostInfo', i)">
                 <img src="../../../../assets/images/delete-button.png" />
               </span>
             </div>
