--- a/src/app/features/subscription-redirections/subscription-redirections.component.html
+++ b/src/app/features/subscription-redirections/subscription-redirections.component.html
@@ -95,7 +95,7 @@
                         </h2>
 
                         <div class="shadow-tag pl-4 pr-4 pt-4 pb-4" [ngClass]="!isMobile ? 'mlr-140px' : '' ">
-                            Your 3 months free trial has expired. We hope, our service were useful to you. We will keep
+                            Your free trial has expired. We hope, our service were useful to you. We will keep
                             your data and information safe with us.
                             <br>To keep continuing our service, please choose any of our subscription plans.
                         </div>
