--- a/src/app/features/po/po.component.html
+++ b/src/app/features/po/po.component.html
@@ -10,7 +10,7 @@
               <img src="../../../../assets/images/download-po.png" /><span class="p-l-5 font-size15" *ngIf="!showResponsiveDesign">Download P.O</span></a
             ></span
           >
-          <button mat-raised-button class="main-background-color main-button color-white send-for-approval-btn" (click)="openShortClose()" [disabled]="!shortClose">
+          <button mat-raised-button class="main-background-color main-button color-white send-for-approval-btn" (click)="openShortClose()">
             Short Close
           </button>
         </div>
