--- a/src/app/shared/dialogs/payment-record/paymentRecord.component.html
+++ b/src/app/shared/dialogs/payment-record/paymentRecord.component.html
@@ -95,16 +95,7 @@
             </div>
             <div [ngClass]="paymentDetail.purchaseOrderCurrency ? 'col-xs-3' : 'col-xs-4'">
               <mat-form-field class="border-input">
-                <input
-                  matInput
-                  [min]="startDate"
-                  [max]="endDate"
-                  [matDatepicker]="dueDate"
-                  placeholder="Date of Payment*"
-                  formControlName="paymentDate"
-                  (click)="dueDate.open()"
-                  readonly
-                />
+                <input matInput [max]="endDate" [matDatepicker]="dueDate" placeholder="Date of Payment*" formControlName="paymentDate" (click)="dueDate.open()" readonly />
                 <mat-datepicker-toggle matSuffix [for]="dueDate"></mat-datepicker-toggle>
                 <mat-datepicker #dueDate startView="month" [startAt]="startDate"></mat-datepicker>
               </mat-form-field>
