--- a/src/app/features/global-store/project-wise/project-wise.component.html
+++ b/src/app/features/global-store/project-wise/project-wise.component.html
@@ -44,7 +44,8 @@
             <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
           >
           <span class="mat-cell maxwidth-14 text-center"
-            >{{ material.GlobalMaterial.issuedQty != null ? material.GlobalMaterial.issuedQty : 0 }} <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
+            >{{ material.GlobalMaterial.poAvailableQty != null ? material.GlobalMaterial.poAvailableQty : 0 }}
+            <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
           >
           <span class="mat-cell maxwidth-14 text-center"
             >{{
