--- a/src/app/shared/header/sidenav-list.html
+++ b/src/app/shared/header/sidenav-list.html
@@ -24,7 +24,7 @@
     </ng-container>
   </ng-container>
 
-  <ng-container *ngIf="isPlanAvailable === 1">
+  <ng-container *ngIf="isPlanAvailable === 1 && accountOwner === 1">
     <div [ngClass]="(buttonName && (buttonName === 'My Plans')) ? 'display-flex active' : 'display-flex'">
       <a href="javascript:void(0)" mat-list-item (click)="goToMyPlans()">
         <img src="../../../assets/images/subscription-plan.svg" alt="" />
