--- a/src/app/shared/header/top-header/top-header.component.html
+++ b/src/app/shared/header/top-header/top-header.component.html
@@ -43,7 +43,7 @@
         <button mat-menu-item class="background-white-color" (click)="goToProfile()">
           My Account
         </button>
-        <ng-container *ngIf="isPlanAvailable === 1">
+        <ng-container *ngIf="isPlanAvailable === 1 && accountOwner === 1">
           <button mat-menu-item class="background-white-color" (click)="goToMyPlans()">
             My Plan / Upgrade
           </button>
@@ -54,14 +54,16 @@
     </div>
   </mat-toolbar-row>
 </mat-toolbar>
-<ng-container *ngIf="isFreeTrialActivate && isFreeTrial !== null">
-  <div class="trial-block" [ngClass]="isMobile ? 'font-size10' : '' ">
-    <span class="mr-1">Your Free Trial of {{ isFreeTrial.planName }} Plan Expire Soon {{ isFreeTrial.daysLeft }} Days
-      Left</span>
-    <button mat-button class="brand-bg-color color-white" [ngClass]="isMobile ? 'font-size10 mt-1' : 'ml-2' "
-      (click)="choosePlan()">Choose
-      Plan</button>
-  </div>
+<ng-container *ngIf="isFreeTrialActivate && isFreeTrial !== null && accountOwner === 1">
+  <ng-container *ngIf="isFreeTrial && isFreeTrial.planName && isFreeTrial.daysLeft">
+    <div class="trial-block" [ngClass]="isMobile ? 'font-size10' : '' ">
+      <span class="mr-1">Your Free Trial of {{ isFreeTrial.planName }} Plan Expire Soon {{ isFreeTrial.daysLeft }} Days
+        Left</span>
+      <button mat-button class="brand-bg-color color-white" [ngClass]="isMobile ? 'font-size10 mt-1' : 'ml-2' "
+        (click)="choosePlan()">Choose
+        Plan</button>
+    </div>
+  </ng-container>
 </ng-container>
 
 <mat-menu #notifs="matMenu" class="header-bell-menu">
